fix: harden war rollback, market actions and scout scheduling